--- a/.github/workflows/py-create-release.yml
+++ b/.github/workflows/py-create-release.yml
@@ -19,6 +19,7 @@ jobs:
     uses: zerapix/reusable-workflows/.github/workflows/py-test-w-db.yml@test
 
   create-release:
+    name: Create Release
     needs: test-with-db-if-needed
     runs-on: ubuntu-latest
     # If are already on a 'release' commit, we should skip this job.
@@ -46,6 +47,7 @@ jobs:
   # Create Separate Job, to distinguish release-creation from deployment
   # (release could have succeeded but deployment fail, can easily re-run deployment without running create-release again)
   deploy-release:
+    name: Trigger Release Auto Deploy
     needs: create-release
     runs-on: ubuntu-latest
     # If are already on a 'release' commit, we should skip this job.
@@ -55,7 +57,7 @@ jobs:
       - name: Release Thunk
         run: echo "Deployed Tag ${{ needs.create-release.outputs.created-release-tag-name }}"
       - name: Trigger Workflow
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           # Run a new workflow job, using originating repo's standard `deployment.yml` via workflow_dispatch
           script: |
