--- a/.github/workflows/py-test-w-db.yml
+++ b/.github/workflows/py-test-w-db.yml
@@ -1,7 +1,7 @@
 # This workflow is used to run unit tests on something that needs an RDS database running.
 on:
   workflow_call:
-name: test-w-db
+name: Test w/DB
 jobs:
   test:
     runs-on: ubuntu-latest
