--- a/.github/workflows/py-test.yml
+++ b/.github/workflows/py-test.yml
@@ -1,7 +1,7 @@
 # This workflow is used to run unit tests without a DB.
 on:
   workflow_call:
-name: test-w-db
+name: Test
 jobs:
   test:
     runs-on: ubuntu-latest
